--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     </head>
 
     <body>
@@ -16,23 +17,23 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-        <div class="container">
-            <div class="section">
-                <div class="text">
-                    <div class="title">
-                        This website is awesome
-                    </div>
-                    <div class="subtext">
-                        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
-                    </div>
-                    <div class="button">
-                        Sign up
-                    </div>
+        <div class="hero">
+            <div class="text">
+                <div class="main">
+                    This website is awesome
                 </div>
-                <div class="image">
-                    this is a place holder for an image
+                <div class="secondary">
+                    This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast
+                </div>
+                <div class="button">
+                    Sign up
                 </div>
             </div>
+            <div class="image">
+                this is a placeholder for an image
+            </div>
+        </div>
+        <div class="container">
             <div class="section">
                 <div class="title2">
                     Some random information.
@@ -81,7 +82,19 @@
                 </div>
             </div>
             <div class ="section">
-
+                <div class="banner">
+                    <div class="bannertext">
+                        <div class="bannermain">
+                            Call to action! It's time!
+                        </div>
+                        <div class="subtext">
+                            Sign up for out product by clicking that button right over there!
+                        </div>
+                    </div>
+                    <div class="bannerbutton">
+                        Sign up
+                    </div>
+                </div>
             </div>
 
         </div>
